--- a/frontend/oneauction.html
+++ b/frontend/oneauction.html
@@ -17,11 +17,9 @@
     </div>
   </section>
   <section>
-  <form id="bidForm">
       <input type="text" id="bidderName" placeholder="Your Name" required>
       <input type="number" id="bidAmount" placeholder="Your Bid" required>
-      <button type="submit">Place Bid</button>
-    </form>
+      <button type="submit" id="btnPlacebid">Place Bid</button>
     </section>
     
     <script type="module" src="/src/room.ts"></script>
