--- a/frontend/oneauction.html
+++ b/frontend/oneauction.html
@@ -14,6 +14,7 @@
     <div>
       <p>Current Bid: <span id="currentBid">100</span></p>
       <p>Highest Bidder: <span id="highestBidder">None</span></p>
+      <p>Min price: <span id="minprice">None</span></p>
     </div>
   </section>
   <section>
